--- a/RayTracerTests/RayTracerTests.csproj
+++ b/RayTracerTests/RayTracerTests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RayTracer.csproj" />
+    <ProjectReference Include="..\RayTracer\RayTracer.csproj" />
   </ItemGroup>
 
 </Project>
